--- a/css/layout.css
+++ b/css/layout.css
@@ -438,7 +438,7 @@ h2 {
   font-size: 40pt;
   letter-spacing: -3px;
   line-height: 52px;
-  font-weight: ;
+  font-weight: 500;
   position: absolute;
   top: 204px;
   right: 1148px;
