--- a/css/layout.css
+++ b/css/layout.css
@@ -5,8 +5,7 @@ body {
 }
 section {
   display: block;
-  border: dashed;
-  border-color: rgb(238, 255, 0);
+  padding: 1px;
 }
 .section-name {
   font-size: 14px;
@@ -28,9 +27,15 @@ h2 {
   text-transform: uppercase;
   line-height: 18px;
   padding: 12px 16px;
-  border: 1px solid black;
+  outline: 1px solid black;
+  outline-offset: -1px;
   border-radius: 20px;
   display: inline;
+}
+
+h2.grey-h2 {
+  color: rgba(0, 0, 0, 0.3);
+  outline-color: rgba(0, 0, 0, 0.3);
 }
 
 /* !ПЕРВЫЙ БЛОК */
@@ -128,61 +133,63 @@ h2 {
 #s-2 {
   width: 100%;
   height: 496px;
+}
+
+#about-content {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  position: relative;
+  width: 1180px;
+  margin-top: 150px;
 }
 
 #about-head {
-  position: absolute;
-  top: 150px;
-  left: 50px;
+  margin-left: 50px;
+  white-space: nowrap;
 }
 #about-text {
-  position: absolute;
-  width: 580px;
+  width: 650px;
   display: flex;
   flex-direction: column;
   gap: 28px;
-  top: 150px;
-  left: 452px;
+  margin-left: 22px;
 }
 #about-union-1 {
-  position: absolute;
-  top: 150px;
-  left: 405px;
+  margin-left: 248px;
 }
 #about-union-2 {
-  position: absolute;
-  top: 150px;
-  left: 1205px;
+  margin-left: 110px;
 }
 /* !ТРЕТИЙ БЛОК */
 #s-3 {
-  position: relative;
   width: 100%;
   height: 669px;
 }
 
-#outline-head {
-  position: absolute;
-  top: 50px;
-  left: 50px;
+#outlines-atic {
+  display: flex;
+  flex-direction: row;
+  align-items: start;
 }
+
+#outlines-content {
+  width: 1180px;
+  display: flex;
+  flex-direction: column;
+  gap: -74px;
+  margin: 50px auto;
+}
+
 #outline-long-line {
-  position: absolute;
-  top: 70px;
-  left: 195px;
+  margin: 21px 0;
+  margin-left: 24px;
 }
 
 #outline-styles {
   display: flex;
   flex-direction: row;
   gap: 8px;
-  position: absolute;
-  top: 50px;
-  right: 50px;
+  margin-left: 24px;
 }
 
 #outline-normal {
@@ -193,30 +200,22 @@ h2 {
 }
 
 #outline-italic {
-  position: relative;
   display: flex;
   width: fit-content;
   flex-direction: column;
   align-items: center;
   gap: 4px;
 }
-#h2-italic {
-  position: absolute;
-  top: 46px;
-  left: 4px;
-}
+
 .grey-h2 {
-  font-style: italic;
   color: rgba(0, 0, 0, 0.3);
 }
 
 .font-lines {
-  position: absolute;
   display: block;
   flex-direction: column;
   width: fit-content;
-  top: 117px;
-  left: 50px;
+  margin-top: -56px;
 }
 
 .row {
@@ -226,7 +225,7 @@ h2 {
 
 .row p {
   font-family: 'TT Neoris', sans-serif;
-  font-size: 28px;
+  font-size: 29px;
   line-height: 35px;
 }
 
@@ -323,14 +322,12 @@ h2 {
 }
 
 #font-in-numbers {
-  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 16px;
   width: 100%;
-  top: 240px;
 }
 
 .font-in-numbers-main {
@@ -359,12 +356,13 @@ h2 {
   align-items: center;
   text-align: center;
 }
-/* хз как в контейнер поместить */
+
 #variable-example {
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  position: absolute;
+  margin: 24px auto;
+
   width: 1180px;
   height: 220px;
   bottom: 50px;
@@ -433,77 +431,101 @@ h2 {
 #s-4 {
   width: 100%;
   height: 708px;
-  position: relative;
+}
+
+#language-atic {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 100px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 #language-head {
-  position: absolute;
   top: 100px;
   left: 50px;
 }
 
-#language-description {
-  position: absolute;
-  top: 109px;
-  right: 50px;
-}
-
 #language-union {
-  position: absolute;
-  top: 106px;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-left: 496px;
 }
 
+#language-description {
+  margin-left: 421px;
+}
+
+#language-block {
+  position: relative;
+  width: 1280px;
+  height: 432px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 34px;
+}
 #language-bg {
-  width: 1976px;
   position: absolute;
-  top: 176px;
-  left: 50%;
-  transform: translateX(-50%);
+  width: 1976px;
+  height: 432px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-/* *подправить расстояние языков друг между другом */
+
+#languages-rows {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 .languages-row {
   position: absolute;
-  top: 200px;
   left: 50%;
   transform: translateX(-50%);
   width: max-content;
   display: flex;
   justify-content: center;
-  white-space: nowrap;
   align-items: center;
+  white-space: nowrap;
+  z-index: 2;
 }
 
 .row-1 {
-  top: 200px;
-  transform: translateX(-50%);
-  gap: 200px;
+  top: 0px;
+  gap: 20px;
 }
 .row-2 {
-  top: 312px;
-  transform: translateX(-50%);
-  gap: 200px;
+  top: 108px;
+  gap: 20px;
 }
 .row-3 {
-  top: 420px;
-  transform: translateX(-50%);
-  gap: 176px;
+  top: 216px;
+  gap: 20px;
 }
+
 .row-4 {
-  top: 528px;
-  transform: translateX(-50%);
-  gap: 255px;
+  top: 324px;
+  gap: 20px;
 }
 
 .languages {
-  font-size: 40pt;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 380px;
+  height: 108px;
+  font-size: 40px;
   letter-spacing: -3px;
   line-height: 52px;
   font-weight: 500;
+  text-transform: uppercase;
+  background-color: #cdcdcd;
+  color: transparent;
+  text-shadow: 0px 0px 5.4px rgba(255, 255, 255, 0.1);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
 }
 
 /* !ПЯТЫЙ БЛОК */
@@ -526,23 +548,27 @@ h2 {
 #s-6 {
   width: 100%;
   height: 570px;
-  position: relative;
 }
 
-#glyph-head {
-  position: absolute;
-  top: 100px;
-  left: 50px;
-}
-
-#glyph-head-2 {
-  position: absolute;
-  top: 100px;
-  right: 50px;
+#glyph-atic {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 100px;
+  margin-left: 50px;
+  margin-right: 50px;
+  height: 42px;
 }
 
 #glyph-line {
-  position: absolute;
+  margin-left: 37px;
+}
+
+#glyph-head-2 {
+  margin-left: 37px;
+}
+
+#glyph-line {
   top: 120px;
   left: 156px;
 }
@@ -551,10 +577,7 @@ h2 {
   display: flex;
   gap: 20px;
   justify-content: center;
-  position: absolute;
-  top: 177px;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-top: 34px;
 }
 
 .glyph-column {
@@ -588,35 +611,32 @@ h2 {
 /* !СЕДЬМОЙ БЛОК */
 #s-7 {
   width: 100%;
-  height: 1151px;
-  position: relative;
+  height: 1150px;
 }
 
-#species-head {
-  position: absolute;
-  top: 100px;
-  left: 50px;
+#species-atic {
+  display: flex;
+  flex-direction: row;
+  margin-top: 100px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 #species-text-1 {
-  position: absolute;
   width: 262px;
-  top: 100px;
-  left: 250px;
+  margin-left: 62px;
 }
 
 #species-text-2 {
-  position: absolute;
   width: 584px;
-  top: 100px;
-  left: 630px;
+  margin-left: 89px;
 }
 #features-block {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   justify-items: center;
-  margin: 220px auto;
+  margin: 80px auto;
   margin-bottom: 0px;
   width: max-content;
 }
@@ -647,28 +667,46 @@ h2 {
 }
 
 #Neo-dot-ris {
-  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 1180px;
-  left: 50px;
-  bottom: 100px;
+  margin: 100px auto;
 }
+
+#Neo-dot-ris img {
+  width: 1180px;
+}
+
 /* !ВОСЬМОЙ БЛОК */
 #s-8 {
   width: 100%;
   height: 954px;
 }
 
-#symbols-head {
-  top: 100px;
-  left: 50px;
+#symbols-atic {
+  display: flex;
+
+  margin-top: 100px;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 100px;
+}
+
+#symbols-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .circle-frame {
-  position: relative;
+  height: 612px;
+  width: 586px;
+  display: flex;
+  justify-content: center;
 }
 #symbols-text {
   width: 795px;
-  top: 100px;
-  right: 59px;
+  margin-left: 162px;
 }
 
 .clocks {
@@ -680,10 +718,17 @@ h2 {
   position: absolute;
   width: 612px;
   height: 612px;
+  background-color: #b0b0b0;
+  color: transparent;
+  text-shadow: 0px 0px 5.4px rgba(255, 255, 255, 0.5);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
 }
 
 .clocks-symbols span {
   font-size: 56px;
+  line-height: 72px;
 }
 
 #row-1 {
@@ -691,6 +736,8 @@ h2 {
   gap: 134px;
   justify-content: center;
   align-items: center;
+  margin-top: 46px;
+  margin-bottom: 46px;
 }
 
 #row-2 {
@@ -698,6 +745,7 @@ h2 {
   gap: 380px;
   justify-content: center;
   align-items: center;
+  margin-bottom: 140px;
 }
 
 #row-3 {
@@ -705,6 +753,7 @@ h2 {
   gap: 380px;
   justify-content: center;
   align-items: center;
+  margin-bottom: 46px;
 }
 
 #row-4 {
@@ -712,45 +761,139 @@ h2 {
   gap: 134px;
   justify-content: center;
   align-items: center;
+  margin-bottom: 46px;
+}
+.symbols-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  height: 572px;
+  background-color: #e6e6e6;
+  color: transparent;
+  text-shadow: 0px 0px 5.4px rgba(255, 255, 255, 0.4);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+}
+
+.symbols-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#column-1 {
+  display: flex;
+  flex-direction: column;
+  gap: 428px;
+}
+
+#column-2 {
+  display: flex;
+  flex-direction: column;
+}
+
+#column-3 {
+  display: flex;
+  flex-direction: column;
+  gap: 408px;
+}
+
+#column-4 {
+  display: flex;
+  flex-direction: column;
+  gap: 240px;
+}
+
+#column-5 {
+  display: flex;
+  flex-direction: column;
+}
+
+.symbols-column p {
+  font-size: 56px;
+  line-height: 72px;
 }
 
 /* !ДЕВЯТЫЙ БЛОК */
 #s-9 {
   width: 100%;
   height: 1384px;
-  position: relative;
 }
 
-#s-9 h2 {
-  position: absolute;
-  top: 50px;
-  left: 50px;
-}
-
-.Photo-examples {
-  position: absolute;
-  width: 1180px;
-  gap: 20px;
-  left: 50%;
-  transform: translate(-50%);
-  top: 123px;
-}
-
-.Photo-row {
+#use-head {
   display: flex;
-  justify-content: center;
-  width: fit-content;
-  gap: 20px;
+  margin-top: 50px;
+  margin-left: 50px;
 }
 
-.Photo-short {
+.photo-examples {
+  width: 1180px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  gap: 20px;
+  margin: 0px 50px;
+  margin-top: 36px;
+}
+
+.top-img {
   width: 580px;
+  height: 600px;
   object-fit: cover;
-  display: block;
 }
 
-#Photo-long {
+.bottom-img {
+  width: 1180px;
+  height: 586px;
+  object-fit: cover;
+  grid-column: 1 / span 2;
+}
+
+.photo-examples img:nth-child(3) {
+  grid-column: 1 / span 2;
+}
+
+/* !ДЕСЯТЫЙ БЛОК */
+#s-10 {
+  width: 100%;
+  height: 312px;
+}
+
+#end-content {
+  display: flex;
+  flex-direction: row;
+  width: 1180px;
+  margin: 134px 50px;
+  gap: 24px;
+}
+
+h2.end-text {
+  border: none;
+  outline: none;
+}
+
+#name-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: -8px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+#bdz {
+  margin-left: 40px;
+  margin-bottom: -8px;
+}
+
+#name {
+  margin-left: 40px;
+  margin-top: -8px;
+}
+
+#end-content {
   display: flex;
   justify-content: center;
-  width: 1180px;
+  align-items: center;
 }
